Fix announcement and trending spacing issue

--- a/style.css
+++ b/style.css
@@ -256,8 +256,13 @@ body {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+.announce__row:first-child {
+	margin-top: 0;
+}
+
 .announce__row:last-child {
 	border-bottom: none;
+	padding-bottom: 0;
 }
 
 .trending__card {
@@ -319,9 +324,19 @@ body {
 
 	.content {
 		grid-template-rows: auto 1fr;
+		grid-template-columns: 1fr 1fr;
 	}
 
 	.content__projects {
 		grid-area: 2 / 1 / 3 / 3;
+	}
+
+	.announce__row {
+		margin-top: 1rem;
+	}
+
+	.trending__row {
+		grid-template-columns: auto 1fr;
+		gap: 2rem;
 	}
 }
